--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation "android.arch.paging:rxjava2:1.0.1"
     implementation "android.arch.paging:runtime:1.0.1"
 
-    implementation "android.arch.navigation:navigation-fragment:1.0.0-beta01"
-    implementation "android.arch.navigation:navigation-ui:1.0.0-beta01"
+    implementation "android.arch.navigation:navigation-fragment:1.0.0-rc02"
+    implementation "android.arch.navigation:navigation-ui:1.0.0-rc02"
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
@@ -68,6 +68,5 @@ dependencies {
     implementation 'org.koin:koin-android:1.0.2'
     implementation "org.koin:koin-android-scope:1.0.2"
     implementation 'org.koin:koin-android-viewmodel:1.0.2'
-
 
 }
