--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,21 +42,21 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:recyclerview-v7:28.0.0"
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'com.facebook.fresco:fresco:1.13.0'
 
-    implementation "io.reactivex.rxjava2:rxjava:2.2.7"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
     implementation "android.arch.paging:rxjava2:1.0.1"
     implementation "android.arch.paging:runtime:1.0.1"
 
-    implementation "android.arch.navigation:navigation-fragment:1.0.0-rc02"
-    implementation "android.arch.navigation:navigation-ui:1.0.0-rc02"
+    implementation "android.arch.navigation:navigation-fragment:1.0.0"
+    implementation "android.arch.navigation:navigation-ui:1.0.0"
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
